# rNetwork

./: .gitignore  Cargo.toml  LICENSE  README.md  data.txt  net_stack.conf  recv.txt
log/: 2025-11-30-changelog.md  2025-12-06-changelog.md  2025-12-11-changelog.md  2025-12-13-changelog.md  baremetal-ipv4-summary.md
net_stack/: Cargo.toml
net_stack/examples/udp/: README.md  udp_client.rs  udp_server.rs
net_stack/src/: cli.rs  config.rs  event_loop.rs  lib.rs  main.rs  stack.rs
net_stack/src/handlers/: arp.rs  icmp.rs  ipv4.rs  mod.rs  udp.rs
net_stack/src/transport/: mod.rs  tcp.rs  udp.rs
protocol/: Cargo.toml
protocol/src/: arp.rs  checksum.rs  error.rs  ethernet.rs  icmp.rs  ipv4.rs  lib.rs  mac.rs  udp.rs
receive/: Cargo.toml
receive/src/: arp.rs  checksum.rs  cli.rs  config.rs  crc.rs  error.rs  ethernet.rs  icmp.rs  ipv4.rs  mac.rs  main.rs
send/: Cargo.toml
send/src/: arp.rs  checksum.rs  cli.rs  error.rs  ethernet.rs  icmp.rs  ipv4.rs  ipv4_addr.rs  mac.rs  main.rs
src/: main.rs
