[package]
name = "net_stack"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "udp_server"
path = "examples/udp/udp_server.rs"

[[bin]]
name = "udp_client"
path = "examples/udp/udp_client.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
pcap = { workspace = true }
static_assertions ={ workspace = true }
protocol = { path = "../protocol" }